--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
             <div class="category">
                 <h3>探空</h3>
                 <ul>
-                    <li><a href="#">探空业务规范</a></li>
-                    <li><a href="#">探空业务手册</a></li>
+                    <li><a href="tangkong_yewu_guifan.pdf" target="_blank">探空业务规范</a></li>
+                    <li><a href="tangkong_yewu_shouce.pdf" target="_blank">探空业务手册</a></li>
                 </ul>
             </div>
             <div class="category">
                 <h3>预报</h3>
                 <ul>
-                    <li><a href="#">预报业务规范</a></li>
-                    <li><a href="#">预报业务手册</a></li>
+                    <li><a href="yubao_yewu_guifan.pdf" target="_blank">预报业务规范</a></li>
+                    <li><a href="yubao_yewu_shouce.pdf" target="_blank">预报业务手册</a></li>
                 </ul>
             </div>
             <div class="category">
                 <h3>观测</h3>
                 <ul>
-                    <li><a href="#">观测业务规范</a></li>
-                    <li><a href="#">观测业务手册</a></li>
+                    <li><a href="guance_yewu_guifan.pdf" target="_blank">观测业务规范</a></li>
+                    <li><a href="guance_yewu_shouce.pdf" target="_blank">观测业务手册</a></li>
                 </ul>
             </div>
         </section>
@@ -132,19 +132,19 @@
             <div class="audit">
                 <h3>探空</h3>
                 <ul>
-                    <li><a href="#">探空业务检查表</a></li>
+                    <li><a href="tangkong_yewu_jiancha.pdf" target="_blank">探空业务检查表</a></li>
                 </ul>
             </div>
             <div class="audit">
                 <h3>预报</h3>
                 <ul>
-                    <li><a href="#">预报业务检查表</a></li>
+                    <li><a href="yubao_yewu_jiancha.pdf" target="_blank">预报业务检查表</a></li>
                 </ul>
             </div>
             <div class="audit">
                 <h3>观测</h3>
                 <ul>
-                    <li><a href="#">观测业务检查表</a></li>
+                    <li><a href="guance_yewu_jiancha.pdf" target="_blank">观测业务检查表</a></li>
                 </ul>
             </div>
         </section>
@@ -153,13 +153,13 @@
             <div class="regulation">
                 <h3>规章制度</h3>
                 <ul>
-                    <li><a href="#">台站探空规章制度</a></li>
+                    <li><a href="taizhan_tankong_guifan.pdf" target="_blank">台站探空规章制度</a></li>
                 </ul>
             </div>
             <div class="regulation">
                 <h3>应急预案</h3>
                 <ul>
-                    <li><a href="#">台站探空应急预案</a></li>
+                    <li><a href="taizhan_yingji_yuan.pdf" target="_blank">台站探空应急预案</a></li>
                 </ul>
             </div>
         </section>
