--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>气象业务管理系统</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- 引入 Google 字体 -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <!-- 引入 Font Awesome 图标库 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <header>
+        <img src="cma_logo.png" alt="中国气象局图标" class="logo">
+        <h1>气象业务管理系统</h1>
+    </header>
     <div class="container">
-        <header>
-            <img src="cma_logo.png" alt="中国气象局图标" class="logo">
-            <h1>气象业务管理系统</h1>
-        </header>
-
         <h2>业务分类与管理</h2>
         <ul>
-            <li><a href="tangkong_yewu_shouce.pdf" target="_blank" class="button">探空业务规范</a></li>
-            <li><a href="yubao_yewu_shouce.pdf" target="_blank" class="button">预报业务规范</a></li>
-            <li><a href="guance_yewu_shouce.pdf" target="_blank" class="button">观测业务规范</a></li>
+            <li><a href="tangkong_yewu_shouce.pdf" target="_blank" class="button">探空业务规范 <i class="fas fa-file-pdf"></i></a></li>
+            <li><a href="yubao_yewu_shouce.pdf" target="_blank" class="button">预报业务规范 <i class="fas fa-file-pdf"></i></a></li>
+            <li><a href="guance_yewu_shouce.pdf" target="_blank" class="button">观测业务规范 <i class="fas fa-file-pdf"></i></a></li>
         </ul>
 
         <h2>业务需求提醒功能</h2>
@@ -29,5 +32,8 @@
         <h2>台站规章制度与应急预案</h2>
         <p>提供台站探空规章制度和应急预案的在线访问或下载功能。</p>
     </div>
+    <footer>
+        <p>&copy; 2024 气象业务管理系统. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
