--- a/index.html
+++ b/index.html
@@ -1,39 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>气象业务管理系统</title>
+    <title>数字梦幻乌托邦</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- 引入 Google 字体 -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <!-- 引入 Font Awesome 图标库 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <img src="cma_logo.png" alt="中国气象局图标" class="logo">
-        <h1>气象业务管理系统</h1>
+        <nav>
+            <div class="logo">我的公司</div>
+            <ul class="nav-links">
+                <li><a href="index.html">首页</a></li>
+                <li><a href="about.html">关于我们</a></li>
+                <li><a href="products.html">产品</a></li>
+                <li><a href="contact.html">联系我们</a></li>
+            </ul>
+        </nav>
     </header>
-    <div class="container">
-        <h2>业务分类与管理</h2>
-        <ul>
-            <li><a href="tangkong_yewu_shouce.pdf" target="_blank" class="button">探空业务规范 <i class="fas fa-file-pdf"></i></a></li>
-            <li><a href="yubao_yewu_shouce.pdf" target="_blank" class="button">预报业务规范 <i class="fas fa-file-pdf"></i></a></li>
-            <li><a href="guance_yewu_shouce.pdf" target="_blank" class="button">观测业务规范 <i class="fas fa-file-pdf"></i></a></li>
-        </ul>
-
-        <h2>业务需求提醒功能</h2>
-        <p>设置提醒功能，针对每个业务类别列出每月必做的内容。</p>
-
-        <h2>内审检查内容管理</h2>
-        <p>管理每个业务类别的内审检查内容清单。</p>
-
-        <h2>台站规章制度与应急预案</h2>
-        <p>提供台站探空规章制度和应急预案的在线访问或下载功能。</p>
-    </div>
+    <section class="hero">
+        <h1>数字梦幻乌托邦</h1>
+        <p>打造智能未来，共享绿色生活</p>
+        <a href="products.html" class="btn">了解更多</a>
+    </section>
+    <section class="about-us">
+        <h2>关于我们</h2>
+        <p>我们是一家致力于智能科技与环保事业的公司...</p>
+        <a href="about.html" class="btn">了解更多</a>
+    </section>
+    <section class="products">
+        <h2>我们的产品</h2>
+        <div class="product-grid">
+            <div class="product-item">
+                <img src="assets/images/product1.jpg" alt="产品1">
+                <h3>产品1</h3>
+                <p>简短描述...</p>
+            </div>
+            <div class="product-item">
+                <img src="assets/images/product2.jpg" alt="产品2">
+                <h3>产品2</h3>
+                <p>简短描述...</p>
+            </div>
+            <div class="product-item">
+                <img src="assets/images/product3.jpg" alt="产品3">
+                <h3>产品3</h3>
+                <p>简短描述...</p>
+            </div>
+        </div>
+    </section>
+    <section class="testimonials">
+        <h2>客户评价</h2>
+        <div class="testimonial-item">
+            <p>“这个产品非常出色！” - 客户A</p>
+        </div>
+        <div class="testimonial-item">
+            <p>“我们对服务非常满意！” - 客户B</p>
+        </div>
+    </section>
     <footer>
-        <p>&copy; 2024 气象业务管理系统. All Rights Reserved.</p>
+        <div class="footer-info">
+            <p>© 2024 我的公司. 保留所有权利。</p>
+            <ul class="social-links">
+                <li><a href="#">微博</a></li>
+                <li><a href="#">微信</a></li>
+                <li><a href="#">LinkedIn</a></li>
+            </ul>
+        </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
